--- a/frontend/src/components/ThemeCard/ThemeCard.scss
+++ b/frontend/src/components/ThemeCard/ThemeCard.scss
@@ -8,6 +8,7 @@
     background: #992011;
     gap: 8px;
     min-height: 93px;
+    width: 100%;
     height: 100%;
     max-height:140px;
     cursor: pointer;
@@ -24,6 +25,7 @@
     }
 
     .img-container{
+        width: 100%;
         max-width: 130px;
         max-height: 130px;
         display: flex;
